--- a/JobProfileMaker.WebAPI/JobProfileMaker.WebAPI.csproj
+++ b/JobProfileMaker.WebAPI/JobProfileMaker.WebAPI.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="14.0.0" />
         <PackageReference Include="EntityFramework" Version="6.5.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
@@ -19,6 +20,12 @@
 
     <ItemGroup>
       <ProjectReference Include="..\JobProfileMaker.Infrastructure\JobProfileMaker.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
