--- a/JobProfileMaker.WebAPI/appsettings.json
+++ b/JobProfileMaker.WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ProfileMaker" : "Would Write it latter"
+  }
 }
